AWS Projects/AWS Kubernetes - EKS/EKS Ingress Controler ALB/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: name-of-namespace.yaml
  name: name-of-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: name-of-match-label-important
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: name-of-match-label-important
    spec:
      containers:
      - image: image-repository
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
