AWS Projects/AWS Kubernetes - EKS/EKS Ingress Controler ALB/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: name-of-namespace.yaml
  name: name-of-service(usado-para-o-ingress)
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: name-matchlabel-of-deployment
